--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
-@import url('https://rsms.me/inter/inter.css');
+/* @import url('https://rsms.me/inter/inter.css'); */
 
+  @import url('https://fonts.googleapis.com/css2?family=Protest+Revolution&family=Protest+Riot&display=swap');
 * {
   box-sizing: border-box;
 }
@@ -17,19 +18,22 @@ body,
 body {
   overscroll-behavior-y: none;
   background: #f5f5f5;
-  font-family: 'Inter var', sans-serif;
+  /* font-family: 'Magic', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
+  /* font-family: 'Protest Riot', sans-serif; */
+  /* font-family: 'Protest Revolution', sans-serif; */
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  color: black;
+  color: b7b7b7;
 }
 
 a {
-  color: black;
+  color: b7b7b7;
+  /* font-family: 'Inter var', sans-serif; */
 }
 
 a {
   pointer-events: all;
-  color: black;
+  color: b7b7b7;
   text-decoration: none;
 }
 
