--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,20 @@
+@font-face {
+  font-family: 'Magic';
+  src: url('./assets/MagicWand.ttf') format('truetype');
+}
+
+/* @import url('https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap'); */
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  /* font-family: 'Magic',Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
+  font-family: 'Protest Riot', sans-serif;
+  /* line-height: 1.5; */
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #b7b7b7;
   background-color: #895757;
+  
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,11 +24,12 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #b7b7b7;
   text-decoration: inherit;
+  transition: all 0.5s ease;
 }
 a:hover {
-  color: #535bf2;
+  color: #ff6c36;
 }
 
 body {
@@ -59,9 +69,44 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #ff6c36;
   }
   button {
     background-color: #f9f9f9;
   }
+}
+
+.text{
+  position: absolute;
+    top: 70%;
+    left: 50%;
+    width: 80vw;
+    font-size: 4vw;
+    translate: -50%;
+    line-height: 1;
+    margin: 0px;
+    border-radius: 10px;
+    background: #0000005c;
+    backdrop-filter: blur(4px);
+    padding: 2% 5%;
+}
+h3{
+  margin: 0;
+}
+.hero{
+  width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: #b7b7b7;
+    text-align: left;
+    background: radial-gradient(circle at 50% 0%,rgba(0,0,0,.6) 50%,rgba(0,0,0,.5) 60%,rgba(0,0,0,.4) 70%,rgba(0,0,0,.3) 80%,rgba(0,0,0,0) 90%);
+    background-size: 100% 100%;
+    background-position: 0px 0px,0px 0px,0px 0px,0px 0px,0px 0px;
+    pointer-events: none;
 }
