--- a/src/index.css
+++ b/src/index.css
@@ -2,20 +2,21 @@
   font-family: 'Magic';
   src: url('./assets/MagicWand.ttf') format('truetype');
 }
+
 @font-face {
   font-family: 'Riot';
   src: url('./assets/ProtestRiot.ttf') format('truetype');
 }
 
 :root {
-  font-family: 'Riot','Magic',Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Riot', 'Magic', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   /* line-height: 1.5; */
   font-weight: 400;
 
   color-scheme: light dark;
   color: #b7b7b7;
   background-color: #895757;
-  
+
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -29,6 +30,7 @@ a {
   text-decoration: inherit;
   transition: all 0.5s ease;
 }
+
 a:hover {
   color: #ff6c36;
 }
@@ -56,9 +58,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -69,45 +73,76 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #ff6c36;
   }
+
   button {
     background-color: #f9f9f9;
   }
 }
 
-.text{
+.text {
   position: absolute;
-    top: 70%;
-    left: 50%;
-    width: 80vw;
-    font-size: 4vw;
-    translate: -50%;
-    line-height: 1;
-    margin: 0px;
-    border-radius: 10px;
-    background: #0000005c;
-    backdrop-filter: blur(4px);
-    padding: 2% 5%;
+  top: 70%;
+  left: 50%;
+  width: 80vw;
+  font-size: 4vw;
+  translate: -50%;
+  line-height: 1;
+  margin: 0px;
+  border-radius: 10px;
+  background: #0000005c;
+  backdrop-filter: blur(4px);
+  padding: 2% 5%;
 }
-h3{
+
+.text::before {
+  content: 'Narrator';
+  font-size: 22px;
+  color: #e7e7e7;
+  position: absolute;
+  top: -30px;
+  left: 50px;
+  background-color: #2e0c0c;
+  padding: 12px 24px;
+  transform: skewX(10deg);
+}
+
+.text::after {
+  content: '';
+  outline: 3px solid #e7e7e7;
+  border-radius: 50%;
+  position: absolute;
+  top: -45px;
+  left: -10px;
+  background-image: url(/avatar.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: left;
+  width: 70px;
+  height: 70px;
+}
+
+h3 {
   margin: 0;
 }
-.hero{
+
+.hero {
   width: 100vw;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    color: #b7b7b7;
-    text-align: left;
-    background: radial-gradient(circle at 50% 0%,rgba(0,0,0,.6) 50%,rgba(0,0,0,.5) 60%,rgba(0,0,0,.4) 70%,rgba(0,0,0,.3) 80%,rgba(0,0,0,0) 90%);
-    background-size: 100% 100%;
-    background-position: 0px 0px,0px 0px,0px 0px,0px 0px,0px 0px;
-    pointer-events: none;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: #b7b7b7;
+  text-align: left;
+  background: radial-gradient(circle at 50% 0%, rgba(0, 0, 0, .6) 50%, rgba(0, 0, 0, .5) 60%, rgba(0, 0, 0, .4) 70%, rgba(0, 0, 0, .3) 80%, rgba(0, 0, 0, 0) 90%);
+  background-size: 100% 100%;
+  background-position: 0px 0px, 0px 0px, 0px 0px, 0px 0px, 0px 0px;
+  pointer-events: none;
 }
